Feature/communicaiton history ui
